@@ -1099,13 +1099,19 @@ $constants = array_merge($constants,
 		'name' => "group_technical",
 		'default' => "none",
 		'title' => _("Technical"),
-		'desc' => _("You usually don't need to change anything in this section."),
+		'desc' => _("The settings in this section are intended for advanced users only.<br><b style='color:red'>Be aware that settings changed on this tab may have severe performance or security consequences and do so at your own risk.</b>"),
 	),
 	'debug' => array(
 		'prompt' => _("Debug mode"),
 		'desc' => _("Turn debug mode on so that you can diagnose problems?") .'<br><span class="emphasis">'. _("Note: Dont leave this option on in production systems! Else you might show users more information about your Gallery and system than you want!") . '</span>',
 		'choices' => array('yes' => _("yes"), 'no' => _("no")),
 		'value' => "no",
+	),
+	'skipRegisterGlobals' => array(
+		'prompt' => _('Disable register_globals check'),
+		'desc' => sprintf(_('<b>Be aware that changing this setting potentially decreases the security of your Gallery, and we may or may not support you if you encounter issues that don\'t occur when this is turned off.</b><br><br>Enabling this causes %s to ignore register_globals being turned on.  %s normally tries to unset all variables created by register_globals to help enforce security.  If a script that you run requires register_globals to be on, and will not cooperate with %s, set this to "yes".'), Gallery(), Gallery(), Gallery(), Gallery()),
+		'choices' => array('yes' => _("yes"), 'no' => _("no")),
+                'value' => "no",
 	),
         'timeLimit' => array(
 		'prompt' => _("Time Limit"),
